--- a/ClienteWeb/styles/miSensor.css
+++ b/ClienteWeb/styles/miSensor.css
@@ -1,7 +1,5 @@
 * {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
     font-family: "Arial";
 }
 
@@ -17,6 +15,7 @@ li, a {
 header {
     display: flex;
     justify-content: center;
+    width: 100%;
     align-items: center;
     padding: 10px 0;
     background-color: #F5F5F5;
@@ -38,18 +37,47 @@ header img {
 }
 
 .contenido div{
-    margin: 50px;
+    margin: 25px auto;
 }
 
 
+.infoPagina {
+    background-color: #82E0AA;
+    width: 100%;
+    
+}
 
+.infoPagina p{
+    color: white;
+}
 
+.contenidoInfoPagina {
+    padding: 50px 150px;
+}
 
+.contenidoInfoPagina p{
+    font-size: 17px;
+}
 
+.caja {
+    justify-content: center;
+    background-color: #F5F5F5;
+    width: 250px;
+    height: 250px;
+    border-style: solid;
+    border-radius: 5px;
+}
 
+.caja img{
+    box-sizing:border-box;
+    background-color: #D1EEDE;
+    margin: auto;
+    padding: 15px 40.5%;
+}
 
-
-
+.caja p {
+    text-align: center;
+}
 
 
 
