--- a/ClienteWeb/styles/popup.css
+++ b/ClienteWeb/styles/popup.css
@@ -9,23 +9,34 @@
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  
+  
 }
 
 /* Modal Content/Box */
 .modal-content {
-  background-color: #080808;
+  
+  background-color: #fdf9f9;
   margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  padding: 9px;
+  border: 4px solid rgb(72, 192, 223);
+  width: 40%; /* Could be more or less, depending on screen size */
+  border-radius: 40px;
+  box-shadow: 0 0 5px #CCC;
+  ;
+  
 }
+
 
 /* The Close Button */
 .close {
-  color: #aaa;
+  
+  color: rgb(10, 10, 10);
   float: right;
   font-size: 28px;
   font-weight: bold;
+
+  
 }
 
 .close:hover,
@@ -33,14 +44,30 @@
   color: black;
   text-decoration: none;
   cursor: pointer;
+  
+    
 }
 
 
+
 .contenido {
+  color: black;
   display: flex;
   justify-content: space-around;
 }
 
 .contenido div{
   margin: 50px;
+  font-family: fantasy;
+  
+}
+
+.contenido p {
+  color: black;
+  font-weight: bold;
+  
+}
+
+.contenido p br p{
+  color: black;
 }
