--- a/Android/NO2V1/app/src/main/res/values/themes.xml
+++ b/Android/NO2V1/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.NO2V1" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.NO2V1" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
 
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
@@ -14,6 +14,6 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="windowNoTitle">true</item>
-        <item name="windowActionBar">false</item>
+        <item name="windowActionBar">true</item>
     </style>
 </resources>
