--- a/Android/NO2V1/app/src/main/res/values-night/themes.xml
+++ b/Android/NO2V1/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.NO2V1" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
+    <style name="Theme.NO2V1" parent="Theme.MaterialComponents.Light">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
