--- a/Android/NO2V1/app/src/main/res/values/themes.xml
+++ b/Android/NO2V1/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.NO2V1" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
+    <style name="Theme.NO2V1" parent="Theme.MaterialComponents.Light.Dialog.Alert.Bridge">
 
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
