--- a/ClienteWeb/INODOS/css/style.css
+++ b/ClienteWeb/INODOS/css/style.css
@@ -580,7 +580,7 @@ body.offcanvas #fh5co-main, body.offcanvas .fh5co-nav-toggle {
 
 .fh5co-testimonial {
   padding: 3em 0;
-  background: #7ac143;
+  background: #7FFFD4;
   position: relative;
 }
 @media screen and (max-width: 768px) {
