--- a/ClienteWeb/INODOS/css/login.css
+++ b/ClienteWeb/INODOS/css/login.css
@@ -24,7 +24,7 @@ h1 {
 
 h2 {
     margin: 0;
-    color: #7ac143;
+    color: #82E0AA;
     font-size: 40px;
     font-weight: 400;
     text-align: center;
@@ -92,7 +92,7 @@ input[type="password"]:focus {
 }
 
 button {
-    background: #7ac143;
+    background: #82E0AA;
     color: #ffffff;
     font-size: 13px;
     text-transform: uppercase;
@@ -149,7 +149,7 @@ footer p a {
     color: #000;
     text-decoration: underline;
     font-weight: bold;
-    text-shadow: #7ac143;
+    text-shadow: #82E0AA;
 }
 
 footer p a:hover {
@@ -160,14 +160,14 @@ footer p a:hover {
     -moz-transition: 0.5s all;
     -ms-transition: 0.5s all;
     transition: 0.5s all;
-    text-shadow: #7ac143;
+    text-shadow: #82E0AA;
     font-weight: bold;
 }
 
 footer {
     padding: 4em 0;
     text-align: center;
-    text-shadow: #7ac143;
+    text-shadow: #82E0AA;
     font-weight: bold;
 
 }
