--- a/ClienteWeb/INODOS/css/popUpInfoMiSensor.css
+++ b/ClienteWeb/INODOS/css/popUpInfoMiSensor.css
@@ -75,3 +75,18 @@
     color: black;
   }
   
+
+  .botonesGases {
+    display: flex;
+    width: 100%;
+    position: fixed; /* Stay in place */
+    bottom: 10px;
+    justify-content: center;
+  }
+
+  #btn_NO2, #btn_SO2, #btn_CO {  
+    width: 130px; /* Full width */
+    height: 50px; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: #83d4c0 /* Black w/ opacity */
+  }
